--- a/src/pages/Sale/style.css
+++ b/src/pages/Sale/style.css
@@ -1,6 +1,6 @@
 
 .sale-page{
-  width: 90%;
+
   display: flex;
   align-items: center;
   justify-content: center;
